forum.quiltmc.org/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum-quiltmc-org
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forum-quiltmc-org
  template:
    metadata:
      labels:
        app: forum-quiltmc-org
    spec:
      containers:
        - name: forum-quiltmc-org
          image: ghcr.io/quiltmc/forum:latest
          imagePullPolicy: Always

          command: ["/bin/bash"]
          args: ["-c", "cd /var/www/discourse; rake s3:upload_assets | grep  & /sbin/boot;"]

          readinessProbe:
            httpGet:
              path: /srv/status
              port: 80
            failureThreshold: 12
            periodSeconds: 10

          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              cpu: 1000m
              memory: 1000Mi

          ports:
            - containerPort: 80

      nodeName: kissland
