forum.quiltmc.org/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forum-quiltmc-org
spec:
  selector:
    app: forum-quiltmc-org
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
