forum.quiltmc.org/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/cloudflare-ca"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
  name: forum.quiltmc.org
spec:
  ingressClassName: nginx
  rules:
    - host: forum.quiltmc.org
      http:
        paths:
          - backend:
              service:
                name: forum-quiltmc-org
                port:
                  number: 80
            path: /
            pathType: Prefix
